crates/compiler/zo-tokenizer/tests/snapshots/tokenization__nested_templates.snap
---
source: crates/compiler-new/zo-tokenizer/tests/tokenization.rs
expression: tokenization
---
tokens:
  kinds:
    - Fun
    - Ident
    - LParen
    - RParen
    - LBrace
    - Imu
    - Ident
    - TemplateAssign
    - LAngle
    - Ident
    - Ident
    - Eq
    - String
    - RAngle
    - LBrace
    - Ident
    - Dot
    - Ident
    - LParen
    - Fn
    - LParen
    - Ident
    - RParen
    - FatArrow
    - Lt
    - Ident
    - Ident
    - Eq
    - LBrace
    - Ident
    - Dot
    - Ident
    - RBrace
    - Gt
    - Lt
    - Ident
    - Gt
    - LBrace
    - Ident
    - Dot
    - Ident
    - RBrace
    - Lt
    - Slash2
    - Ident
    - Gt
    - Lt
    - Ident
    - Ident
    - Eq
    - LBrace
    - Fn
    - LParen
    - RParen
    - FatArrow
    - Ident
    - LParen
    - Ident
    - RParen
    - RBrace
    - Gt
    - Unknown
    - Unknown
    - Lt
    - Slash2
    - Ident
    - Gt
    - Lt
    - Slash2
    - Ident
    - Gt
    - RParen
    - RBrace
    - LAngle
    - Slash2
    - Ident
    - RAngle
    - Semicolon
    - Hash
    - Ident
    - Ident
    - Semicolon
    - RBrace
    - Eof
  starts:
    - 5
    - 9
    - 13
    - 14
    - 16
    - 24
    - 28
    - 33
    - 37
    - 38
    - 42
    - 47
    - 48
    - 59
    - 69
    - 70
    - 75
    - 76
    - 79
    - 80
    - 82
    - 83
    - 87
    - 89
    - 103
    - 104
    - 107
    - 110
    - 111
    - 112
    - 116
    - 117
    - 119
    - 120
    - 134
    - 135
    - 139
    - 140
    - 141
    - 145
    - 146
    - 150
    - 151
    - 152
    - 153
    - 157
    - 171
    - 172
    - 179
    - 186
    - 187
    - 188
    - 190
    - 191
    - 193
    - 196
    - 202
    - 203
    - 207
    - 208
    - 209
    - 210
    - 211
    - 212
    - 213
    - 214
    - 220
    - 232
    - 233
    - 234
    - 236
    - 246
    - 247
    - 255
    - 256
    - 257
    - 260
    - 261
    - 270
    - 271
    - 275
    - 279
    - 285
    - 289
  lengths:
    - 3
    - 4
    - 1
    - 1
    - 1
    - 3
    - 4
    - 3
    - 1
    - 3
    - 5
    - 1
    - 11
    - 1
    - 1
    - 5
    - 1
    - 3
    - 1
    - 2
    - 1
    - 4
    - 1
    - 2
    - 1
    - 2
    - 3
    - 1
    - 1
    - 4
    - 1
    - 2
    - 1
    - 1
    - 1
    - 4
    - 1
    - 1
    - 4
    - 1
    - 4
    - 1
    - 1
    - 1
    - 4
    - 1
    - 1
    - 6
    - 7
    - 1
    - 1
    - 2
    - 1
    - 1
    - 2
    - 6
    - 1
    - 4
    - 1
    - 1
    - 1
    - 1
    - 1
    - 1
    - 1
    - 6
    - 1
    - 1
    - 1
    - 2
    - 1
    - 1
    - 1
    - 1
    - 1
    - 3
    - 1
    - 1
    - 1
    - 3
    - 4
    - 1
    - 1
    - 0
  literal_indices:
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 1
    - 0
    - 0
    - 2
    - 3
    - 0
    - 0
    - 0
    - 0
    - 4
    - 0
    - 5
    - 0
    - 0
    - 0
    - 6
    - 0
    - 0
    - 0
    - 7
    - 8
    - 0
    - 0
    - 9
    - 0
    - 10
    - 0
    - 0
    - 0
    - 11
    - 0
    - 0
    - 12
    - 0
    - 13
    - 0
    - 0
    - 0
    - 14
    - 0
    - 0
    - 15
    - 16
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 17
    - 0
    - 18
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 19
    - 0
    - 0
    - 0
    - 20
    - 0
    - 0
    - 0
    - 0
    - 0
    - 21
    - 0
    - 0
    - 0
    - 22
    - 23
    - 0
    - 0
    - 0
literals:
  identifiers:
    - - 9
      - 4
    - - 28
      - 4
    - - 38
      - 3
    - - 42
      - 5
    - - 70
      - 5
    - - 76
      - 3
    - - 83
      - 4
    - - 104
      - 2
    - - 107
      - 3
    - - 112
      - 4
    - - 117
      - 2
    - - 135
      - 4
    - - 141
      - 4
    - - 146
      - 4
    - - 153
      - 4
    - - 172
      - 6
    - - 179
      - 7
    - - 196
      - 6
    - - 203
      - 4
    - - 214
      - 6
    - - 234
      - 2
    - - 257
      - 3
    - - 271
      - 3
    - - 275
      - 4
  string_literals:
    - - 49
      - 9
  int_literals: []
  float_literals: []
  char_literals: []
  byte_literals: []
source_len: 289
