crates/compiler/zo-tokenizer/tests/snapshots/tokenization__snapshot_tokenization.snap
---
source: crates/compiler-new/zo-tokenizer/tests/tokenization.rs
expression: tokenization
---
tokens:
  kinds:
    - Fun
    - Ident
    - LParen
    - RParen
    - LBrace
    - Mut
    - Ident
    - Colon
    - IntType
    - Eq
    - Int
    - Semicolon
    - Imu
    - Ident
    - Colon
    - Lt
    - Slash2
    - Gt
    - TemplateAssign
    - TemplateFragmentStart
    - LAngle
    - Ident
    - Ident
    - Eq
    - LBrace
    - Fn
    - LParen
    - RParen
    - FatArrow
    - Ident
    - MinusEq
    - Int
    - RBrace
    - TemplateText
    - LAngle
    - Slash2
    - Ident
    - RAngle
    - TemplateText
    - LBrace
    - Ident
    - RBrace
    - TemplateText
    - LAngle
    - Ident
    - Ident
    - Eq
    - LBrace
    - Fn
    - LParen
    - RParen
    - FatArrow
    - Ident
    - PlusEq
    - Int
    - RBrace
    - TemplateText
    - LAngle
    - Slash2
    - Ident
    - RAngle
    - TemplateFragmentEnd
    - Semicolon
    - Hash
    - Ident
    - Ident
    - Semicolon
    - RBrace
    - Eof
  starts:
    - 5
    - 9
    - 13
    - 14
    - 16
    - 24
    - 28
    - 33
    - 35
    - 39
    - 41
    - 42
    - 51
    - 55
    - 62
    - 64
    - 65
    - 66
    - 68
    - 72
    - 83
    - 84
    - 91
    - 98
    - 99
    - 100
    - 102
    - 103
    - 105
    - 108
    - 114
    - 117
    - 118
    - 119
    - 121
    - 122
    - 123
    - 129
    - 139
    - 169
    - 170
    - 175
    - 185
    - 224
    - 225
    - 232
    - 239
    - 240
    - 241
    - 243
    - 244
    - 246
    - 249
    - 255
    - 258
    - 259
    - 260
    - 262
    - 263
    - 264
    - 270
    - 278
    - 281
    - 296
    - 297
    - 301
    - 308
    - 314
    - 318
  lengths:
    - 3
    - 4
    - 1
    - 1
    - 1
    - 3
    - 5
    - 1
    - 3
    - 1
    - 1
    - 1
    - 3
    - 7
    - 1
    - 1
    - 1
    - 1
    - 3
    - 2
    - 1
    - 6
    - 7
    - 1
    - 1
    - 2
    - 1
    - 1
    - 2
    - 5
    - 2
    - 1
    - 1
    - 2
    - 1
    - 1
    - 6
    - 1
    - 30
    - 1
    - 5
    - 1
    - 39
    - 1
    - 6
    - 7
    - 1
    - 1
    - 2
    - 1
    - 1
    - 2
    - 5
    - 2
    - 1
    - 1
    - 2
    - 1
    - 1
    - 6
    - 1
    - 3
    - 1
    - 1
    - 3
    - 7
    - 1
    - 1
    - 0
  literal_indices:
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 1
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 2
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 3
    - 4
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 5
    - 0
    - 1
    - 0
    - 0
    - 0
    - 0
    - 6
    - 0
    - 0
    - 0
    - 7
    - 0
    - 0
    - 0
    - 8
    - 9
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 10
    - 0
    - 2
    - 0
    - 0
    - 0
    - 0
    - 11
    - 0
    - 0
    - 0
    - 0
    - 12
    - 13
    - 0
    - 0
    - 0
literals:
  identifiers:
    - - 9
      - 4
    - - 28
      - 5
    - - 55
      - 7
    - - 84
      - 6
    - - 91
      - 7
    - - 108
      - 5
    - - 123
      - 6
    - - 170
      - 5
    - - 225
      - 6
    - - 232
      - 7
    - - 249
      - 5
    - - 264
      - 6
    - - 297
      - 3
    - - 301
      - 7
  string_literals: []
  int_literals:
    - 0
    - 1
    - 1
  float_literals: []
  char_literals: []
  byte_literals: []
source_len: 318
